# fastapi-helloworld_test

./: compose.yaml
Inventory_services/: .env  Dockerfile.dev  main.py  pyproject.toml
Inventory_services/app/db/: db.py
Inventory_services/app/kafka/: kafka_consumer.py  kafka_producer.py
Inventory_services/app/model/: inventory_model.py
Product_services/: Dockerfile.dev  main.py  model.py  pyproject.toml
Product_services/app/: db.py  setting.py
fastapi_helloworld/: .env
notification_service/app/: main.py  model.py
notification_service/app/kafka/: kafka_consumer.py
order_service/: .env  Dockerfile.dev  main.py
order_service/app/model/: order_model.py
payment_service/: .env  main.py  payment_processor.py
payment_service/app/: config.py  model.py
payment_service/app/db/: setting.py
payment_service/app/kafka/: kafka_producer.py
user_service/: Dockerfile.dev  pyproject.toml
user_service/app/: main.py  user.proto
user_service/app/controllers/: crud_user.py
user_service/app/db/: db_connector.py
user_service/app/kafka/: user_consumer.py
user_service/app/model/: user_models.py
user_service/app/routes/: user_routes.py
user_services/: auth.py  main.py  model.py  pyproject.toml
user_services/app/: db.py  setting.py
user_services/router/: user.py
