[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["abubakarcbs <139690514+abubakarcbs@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
psycopg-binary = "^3.2.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}
sqlmodel = "^0.0.21"
confluent-kafka = "^2.5.0"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
